# technically_ramadhan

./: Cargo.toml
go/day3/: toWeirdCase.go
python/day5/: solve.py
rust/: Cargo.toml
rust/src/: words_to_marks.rs
rust/src/day4/: high.rs
src/: positive_negative_sum.rs
