[package]
name = "technically_ramadhan"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "count_positives_sum_negatives"
path = "src/day1/count_positives_sum_negatives.rs"

[[bin]]
name = "words_to_marks"
path = "src/day2/words_to_marks.rs"

[[bin]]
name = "high"
path = "src/day4/high.rs"
